apps/testero/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: testero
    app.kubernetes.io/component: testero
    app.kubernetes.io/instance: testero
  name: testero
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: testero
  sessionAffinity: None
  type: ClusterIP
